--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,8 @@
         alert("스테이지를 1 이상 올바르게 입력해주세요.");
         return;
       }
-      currentStage = count
+      currentStage = count;
+      updateStageDisplay();
     }
     
     // 버튼 눌렀을 때 반복 실행 설정 함수
