--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
       }
     
       inDungeon = true;
-      document.getElementById("bossToggleBtn").innerText = "보스 나가기";
+      document.getElementById("bossToggleBtn").innerText = "보스랑 싸우기";
       log("⚔️ 보스와의 전투가 시작됩니다!");
     
       // 보스 스탯 계산 (스테이지 기반)
