--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
       if (!inBossDungeon) return;
       clearInterval(bossdungeuonInterval);
       inBossDungeon = false;
-      document.getElementById("fightBossBtn").innerText = "보스랑 싸우기";
+      document.getElementById("fightBossBtn").innerText = "보스와 싸우기";
       log("보스 전투를 중지했습니다")
     }
     
