--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
     
     function enterBossBattle() {
       if (inBossDungeon) {
-        exitDungeon();
+        exitBossDungeon();
         return;
       }
     
