--- a/index.html
+++ b/index.html
@@ -870,8 +870,9 @@
 
     //유저가 누른거에 맞춰서 표시해주는 함수
     function showTab(name) {
-      if ((name === "home" || name === "shop" || name === "donate" || name === "ranking" || name === "arena") && inDungeon) {
+      if ((name === "home" || name === "shop" || name === "donate" || name === "ranking" || name === "arena" || name === "inventory") && (inDungeon || inBossDungeon)) {
         exitDungeon();
+        exitBossDungeon();
       }
     
       document.getElementById("homeTab").style.display = name === "home" ? "block" : "none";
