--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
         return;
       }
     
-      inDungeon = true;
+      inBossDungeon = true;
       document.getElementById("bossToggleBtn").innerText = "보스와 싸우기";
       log("⚔️ 보스와의 전투가 시작됩니다!");
     
