--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
     <div id="bossTab" style="display:none; padding:10px;">
       <h2>⚔️ 보스 전투</h2>
       <div id="bossInfo">
-        <p id="bossName">보스 이름: 드래곤</p>
-        <p id="bossHp">HP: <span id="bossHpValue">1000</span></p>
+        <p id="bossName">보스</p>
+        <p id="bossHp">HP: <span id="bossHpValue">0</span></p>
       </div>
       <button id="fightBossBtn" onclick="enterBossBattle()">보스와 싸우기</button>
       <div id="bossFightResult"></div>
