--- a/index.html
+++ b/index.html
@@ -315,6 +315,8 @@
     let dungeonInterval;
     let bossdungeonInterval;
     let currentStage = 1;
+    let currentBossStage = 1;
+    const maxBossStage = 1;
     const maxStage = 10000000;
 
     function log(msg) {
