--- a/index.html
+++ b/index.html
@@ -609,11 +609,11 @@
       }
     
       inBossDungeon = true;
-      document.getElementById("fightBossBtn").innerText = "보스와 싸우기";
+      document.getElementById("fightBossBtn").innerText = "보스 전투 중지";
       log("⚔️ 보스와의 전투가 시작됩니다!");
     
       // 보스 스탯 계산 (스테이지 기반)
-      let bossStage = currentStage; // 보스 스테이지도 currentStage 기준 사용
+      let bossStage = currentBossStage; // 보스 스테이지도 currentStage 기준 사용
       let bossHp = Math.floor((bossStage / 5 + 2) * bossStage * 10);
       let bossCrit = bossStage * 2;
       let bossHit = bossStage * 10;
