--- a/index.html
+++ b/index.html
@@ -735,8 +735,8 @@
     }
     
     function stopBossBattle() {
-      clearInterval(dungeonInterval);
-      inDungeon = false;
+      clearInterval(bossdungeuonInterval);
+      inBossDungeon = false;
       document.getElementById("bossToggleBtn").innerText = "보스 전투 시작";
     }
 
