--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
     let inBossDungeon = false;
     let dungeonInterval;
     let bossdungeonInterval;
+    let isProcessingBossTick = false;
     let currentStage = 1;
     let currentBossStage = 1;
     const maxBossStage = 1;
