--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
     function stopBossBattle() {
       clearInterval(bossdungeonInterval);
       inBossDungeon = false;
-      document.getElementById("bossToggleBtn").innerText = "보스 전투 시작";
+      document.getElementById("bossFightBtn").innerText = "보스와 싸우기";
     }
 
 
