--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
       log("던전에 입장합니다!");
     
       let monsterHp = Math.floor((currentStage / 7 + 1) * currentStage * 2);
-      let monsterCrit = currentStage;
+      let monsterCrit = currentStage/(currentStage + userData.dex);
       let monsterHit = currentStage * 7;
       let monsterDef = (currentStage / 20 + 1) * currentStage;
       let monsterAtk = Math.floor((currentStage / 4 + 1) * currentStage);
@@ -502,7 +502,7 @@
         if (Math.random() < evasionRatePlayer) {
           log("플레이어가 몬스터 공격을 회피했습니다.");
         } else {
-          let isCrit = Math.random() * 100 < monsterCrit;
+          let isCrit = Math.random() < monsterCrit;
           let playerDef = userData.con;
           let dmgReduction = 1 - (playerDef / (userData.level * 2 + playerDef));
           let dmg = monsterAtk;
