--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
 
     //유저가 누른거에 맞춰서 표시해주는 함수
     function showTab(name) {
-      if ((name === "home" || name === "shop" || name === "donate" || name === "ranking" || name === "arena" || name === "inventory") && (inDungeon || inBossDungeon)) {
+      if ((name === "home" || name === "shop" || name === "boss" || name === "donate" || name === "ranking" || name === "arena" || name === "inventory") && (inDungeon || inBossDungeon)) {
         exitDungeon();
         exitBossDungeon();
       }
