--- a/index.html
+++ b/index.html
@@ -1366,9 +1366,11 @@
         });
     
         const data = await response.json();
-        if (data.success) {
+        if (data.success && data.droppedItem) {
           // 보상 처리 완료
-          console.log('보스 처치 보상 지급 완료');
+          log(`보스 처치 후 ${data.droppedItem.name} 아이템을 획득했습니다!`);
+          inventory.push(data.droppedItem); // 임시
+          renderInventory();
           return true;
         } else {
           console.error('보스 처치 보상 지급 실패:', data.error);
