--- a/index.html
+++ b/index.html
@@ -1403,6 +1403,7 @@
         str: userData.str + bonus.str,
         dex: userData.dex + bonus.dex,
         con: userData.con + bonus.con,
+        bonus
       };
     }
   </script>
