--- a/index.html
+++ b/index.html
@@ -1352,6 +1352,7 @@
     
       renderInventory();
       renderEquipment();
+      updateStatDisplay(userData, equipped);
     }
     
     async function reportBossDefeat(bossStage, firebaseToken) {
