--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
       <h2>🎒 인벤토리</h2>
       <div id="equipmentSlots" style="display: flex; gap: 10px; margin-bottom: 20px;">
         <div id="slot-weapon">무기: 없음</div>
-        <div id="slot-helmet">헬멧: 없음</div>
+        <div id="slot-helmet">투구: 없음</div>
         <div id="slot-armor">갑옷: 없음</div>
         <div id="slot-shield">방패: 없음</div>
         <div id="slot-boots">신발: 없음</div>
