--- a/index.html
+++ b/index.html
@@ -477,7 +477,18 @@
       }
     }
 
-
+    function checkLevelUp() {
+      while (userData.exp >= userData.level * 100) {
+        const needExp = userData.level * 100;
+        userData.exp -= needExp;
+        userData.level++;
+        userData.statPoints += 3;
+        userData.maxHp = (Math.floor(userData.level / 3) + 1) * userData.con * 5 + 100;
+        userData.hp = userData.maxHp;
+        log(`레벨업! 현재 레벨: ${userData.level}`);
+      }
+    }
+    
     function enterDungeon() {
       if (inDungeon) {
         exitDungeon();
