--- a/index.html
+++ b/index.html
@@ -525,7 +525,8 @@
     
         dungeonWorker.postMessage({
           command: 'start',
-          userData: { ...userData, currentStage }
+          userData: { ...userData,}
+          currentStage: currentStage
         });
     
       } catch (err) {
