--- a/index.html
+++ b/index.html
@@ -514,13 +514,8 @@
           if (e.data.type === 'combatTick') {
             e.data.logs.forEach(line => log(line));
             userData = e.data.userData;  // 워커에서 온 최신 유저 데이터 반영
-            autoUsePotion();
-            updateUI();                 // UI 갱신
-          }
-          
-          if (e.data.type === 'debug') {
-          } else if (e.data.type === 'combatTick') {
-            updateUI();
+            updateUI();                  // 먼저 UI 업데이트
+            autoUsePotion();            // 그 후 포션 자동 사용
           } else if (e.data.type === 'monsterDefeated') {
             userData.gold += e.data.gold;
             userData.exp += e.data.exp;
