--- a/index.html
+++ b/index.html
@@ -525,11 +525,19 @@
         };
     
         dungeonWorker.onmessage = function (e) {
+          const now = Date.now();
+
           if (e.data.type === 'combatTick') {
-            e.data.logs.forEach(line => log(line));
-            userData = e.data.userData;  // 워커에서 온 최신 유저 데이터 반영
-            updateUI();                  // 먼저 UI 업데이트
-            autoUsePotion();            // 그 후 포션 자동 사용
+            // 최근 monsterDefeated 이후 일정 시간 이내면 userData 덮어쓰기 방지
+            if (now - lastUpdateTime > 100) {
+              userData.hp = e.data.userData.hp;
+              userData.maxHp = e.data.userData.maxHp;
+              userData.potion_small = e.data.userData.potion_small;
+              userData.potion_medium = e.data.userData.potion_medium;
+              userData.potion_large = e.data.userData.potion_large;
+            }
+            updateUI();
+            autoUsePotion();
           } else if (e.data.type === 'monsterDefeated') {
             userData.gold += e.data.gold;
             userData.exp += e.data.exp;
