--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@
             userData = e.data.userData;
             updateUI();
             autoUsePotion();
+            updateUI();
             saveData();
           }
           
