--- a/index.html
+++ b/index.html
@@ -1069,6 +1069,7 @@
         document.getElementById("gameUI").style.display = "block";
         updateUI();
         renderInventory();
+        loadInventory();
         document.getElementById("nicknameDisplay").innerText = userData.nickname;
         document.getElementById("bottomStatus").style.display = "flex";
         showTab("home");
