--- a/index.html
+++ b/index.html
@@ -1466,7 +1466,7 @@
       try {
         const token = await firebase.auth().currentUser.getIdToken();
     
-        const res = await fetch('https://autorpg.onrender.com/api/inventory', {
+        const res = await fetch(`https://autorpg.onrender.com/api/inventory?uid=${uid}`, {
           headers: { Authorization: `Bearer ${token}` }
         });
     
