--- a/index.html
+++ b/index.html
@@ -1473,6 +1473,8 @@
         if (!res.ok) throw new Error('인벤토리 불러오기 실패');
     
         const data = await res.json();
+
+        inventory = data.inventory || [];
     
         renderInventory();
         applyFinalStats();
