--- a/index.html
+++ b/index.html
@@ -1586,7 +1586,7 @@
       userData.maxHp = maxHp;
       if (userData.hp > maxHp) userData.hp = maxHp;
     
-      document.getElementById('hpStat').textContent = `${userData.hp} / ${userData.maxHp}`;
+      document.getElementById('hpBar').textContent = `${userData.hp} / ${userData.maxHp}`;
     }
   </script>
 </body>
