--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
             console.error(error);
             document.getElementById('bossFightResult').innerHTML = '서버 통신 실패';
           }
-          
+          loadInventory();
           stopBossBattle(); // 자동전투 중지
           checkLevelUp();
         }
