--- a/index.html
+++ b/index.html
@@ -1394,6 +1394,7 @@
         if (data.success && data.droppedItem) {
           // 보상 처리 완료
           log(`보스 처치 후 ${data.droppedItem.name} 아이템을 획득했습니다!`);
+          loadInventory();
           renderInventory();
           return true;
         } else {
