--- a/index.html
+++ b/index.html
@@ -1377,6 +1377,7 @@
       renderInventory();
       renderEquipment();
       updateStatDisplay(userData, equipped);
+      saveData();
     }
     
     async function reportBossDefeat(bossStage, firebaseToken) {
