--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
     
             if (result.success && result.droppedItem) {
               userData.inventory.push(result.droppedItem);
-              log(`🎁 보스 전리품 획득: ${result.droppedItem.name}`);
+              log(`🎁 보스 전리품 획득: ${result.droppedItem.item_name}`);
 
               saveData();
               updateUI();
