--- a/index.html
+++ b/index.html
@@ -1079,6 +1079,7 @@
       } catch (error) {
         alert("로그인 실패: " + error.message);
       }
+      updateStatDisplay(userData, equipped);
     }
 
 
